--- a/app/views/top/_header.html.haml
+++ b/app/views/top/_header.html.haml
@@ -12,13 +12,18 @@
             %i.fa.fa-list
             %span カテゴリから探す
           %ul.header__wrapper__bottom__search-menu__category__wrapper
-            %li.header__wrapper__bottom__search-menu__category__wrapper__1 レディス
-            %li.header__wrapper__bottom__search-menu__category__wrapper__1 メンズ
-            %li.header__wrapper__bottom__search-menu__category__wrapper__1 ベビーキッズ
+            %li.header__wrapper__bottom__search-menu__category__wrapper__1
+              %a レディス
+            %li.header__wrapper__bottom__search-menu__category__wrapper__1
+              %a メンズ
+            %li.header__wrapper__bottom__search-menu__category__wrapper__1
+              %a ベビーキッズ
             %ul.header__wrapper__bottom__search-menu__category__wrapper__wrapper
-              %li.header__wrapper__bottom__search-menu__category__wrapper__wrapper__1 トップス
+              %li.header__wrapper__bottom__search-menu__category__wrapper__wrapper__1
+                %a トップス
               %ul.header__wrapper__bottom__search-menu__category__wrapper__wrapper__wrapper
-                %li.header__wrapper__bottom__search-menu__category__wrapper__wrapper__wrapper__1 シャツ
+                %li.header__wrapper__bottom__search-menu__category__wrapper__wrapper__wrapper__1
+                  %a シャツ
         %li.header__wrapper__bottom__search-menu__brand
           %h2.header__wrapper__bottom__search-menu__brand__icon
             %i.fa.fa-tag
