--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -19,78 +19,88 @@ body {
   border-style: solid;
   border-width: 0;
   font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
+    &__pc {
+      height: 260px;
+      margin: 0 auto;
+      color: #fff;
+      display: flex;
+      font-size: inherit;
+      line-height: inherit;
+      box-sizing: inherit;
+      position: relative;
+      width: 750px;
+      list-style: none;
+      margin: 0 auto;
+        &__inner {
+          left: 0;
+          top: 50%;
+          left: 16px;
+          
+          text-shadow: 0 0 5px rgba(0,0,0,0.4);
+          padding: 0;
+          // position: absolute;
+          // -webkit-transform: translate(0, -50%);
+          // transform: translate(0, -50%);
+          h2 {
+            font-size: 24px;
+            line-height: 1.4;
+            margin: 50px 0 0 0;
+          }
+          p {
+            font-size: 35px;
+            margin: 0 0 0;
+            
+          }
 
-
-
-  
-}
-
-
-
-.app-banner-pc {
-  height: 260px;
-  margin: 0 auto;
-  color: #fff;
-  background-size: cover;
-  display: block;
-  font-size: inherit;
-  line-height: inherit;
-  box-sizing: inherit;
-
-  .app-banner-pc-inner {
-    // background-image: url("/download_bg_pc.jpg");
-    // width: 1440px;
-      ul {
-        list-style: none;
-      }
-      .app-banner-icon.clearfix {
-        display:flex
-      }
+          &__icon.clearfix {
+            float: left;
+            line-height: 68px;
+            display: flex;
+            display:inline-block;
+            display: flex;
+            margin: 20px 0 0;
+            // position: absolute;
+            // top: 110px;
+            .merucari {
+            float: left;
+            margin: 0;
+            }
+            .icon {
+              margin: 15px 0 0 24px;
+              padding: 0;
+            }
+            ul {
+              list-style: none;
+              display: flex;
+              // position: absolute;
+              // right: 300px;
+              margin: 30px;
+            }
+            .appstore {
+              // margin-right: 20px;
+            }
+            .googleplay {
+              margin-left: 20px;
+            }
+          }
+            
+              
+                
+          }
+    }
   }
-}
-
-.app-banner-pc {
-  
-  height: 260px;
-  margin: 0 auto;
-  color: #fff;
-  background-size: cover;
-}
-
-// メルカリのアイコン
-.app-banner-icon figure {
-  float: left;
-}
-
-
-
-
-.app-banner-icon a {
-  line-height: 68px;
-  // display:inline-block;
-}
-
-.app-banner-pc>figure img {
-  width: 100%;
-  vertical-align: middle;
-}
-
-.app-banner-icon {
-  margin: 20px 0 0;
-}
 
 .figure {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 300px;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 300px;
+  height: 100%;
+  
 }
 
-  h2 {
-    font-weight: bold;
-  }
+
 
   nav {
     width: 1020px;
@@ -129,8 +139,7 @@ body {
 
   .global-footer {
     width: 100%;
-    height: 65vh;
-    padding: 0 20px 10px 20px;
+    height: 120vh;
     background: #212121;
     color: #fff;
     text-align: center;
