--- a/app/views/top/_header.html.haml
+++ b/app/views/top/_header.html.haml
@@ -1,16 +1,16 @@
 .header
   .header__wrapper
     .header__wrapper__top
-      %img.header__wrapper__top__logo{src: "assets/Free_Sample_By_Wix.jpeg"} 
+      %img.header__wrapper__top__logo{src: "assets/mypage/logo.svg"} 
       %form.header__wrapper__top__search-box
         %input.header__wrapper__top__search-box__input-box{type: "text", placeholder: "何かお探しですか？"}
         %i.fa.fa-search
     .header__wrapper__bottom
       %ul.header__wrapper__bottom__search-menu
         %li.header__wrapper__bottom__search-menu__category
-          %h2.header__wrapper__bottom__search-menu__category__icon
+          .header__wrapper__bottom__search-menu__category__icon
             %i.fa.fa-list
-            %span カテゴリから探す
+            %span カテゴリーから探す
           %ul.header__wrapper__bottom__search-menu__category__wrapper
             %li.header__wrapper__bottom__search-menu__category__wrapper__1
               %a レディス
@@ -25,7 +25,7 @@
                 %li.header__wrapper__bottom__search-menu__category__wrapper__wrapper__wrapper__1
                   %a シャツ
         %li.header__wrapper__bottom__search-menu__brand
-          %h2.header__wrapper__bottom__search-menu__brand__icon
+          .header__wrapper__bottom__search-menu__brand__icon
             %i.fa.fa-tag
             %span ブランドから探す
           %ul.header__wrapper__bottom__search-menu__brand__wrapper
@@ -44,19 +44,27 @@
       %ul.header__wrapper__bottom__user-menu
         %li.header__wrapper__bottom__user-menu__good
           .header__wrapper__bottom__user-menu__good__icon
-            %i.fa.fa-heart
-            %span いいね一覧
+            = fa_icon 'heart-o', class: 'gray'
+            %span いいね！一覧
         %li.header__wrapper__bottom__user-menu__notification
           .header__wrapper__bottom__user-menu__notification__icon
-            %i.fa.fa-bell
+            = fa_icon 'bell-o', class:'gray'
             %span お知らせ
+            .header__wrapper__bottom__user-menu__notification__icon__count 10
           %ul.header__wrapper__bottom__user-menu__notification__wrapper
             %li.header__wrapper__bottom__user-menu__notification__wrapper__content
               %img{src:"//static.mercdn.net/images/mercari_profile.png"}
               .header__wrapper__bottom__user-menu__notification__wrapper__content__box
                 .header__wrapper__bottom__user-menu__notification__wrapper__content__box__text 安心でかんたんに出品する方法をCHECKしてみよう！
                 .header__wrapper__bottom__user-menu__notification__wrapper__content__box__time
-                  %i.fa.fa-time
+                  = fa_icon 'clock-o', class:'gray'
+                  %span 11時間前
+            %li.header__wrapper__bottom__user-menu__notification__wrapper__content
+              %img{src:"//static.mercdn.net/images/mercari_profile.png"}
+              .header__wrapper__bottom__user-menu__notification__wrapper__content__box
+                .header__wrapper__bottom__user-menu__notification__wrapper__content__box__text 安心でかんたんに出品する方法をCHECKしてみよう！
+                .header__wrapper__bottom__user-menu__notification__wrapper__content__box__time
+                  = fa_icon 'clock-o', class:'gray'
                   %span 11時間前
         %li.header__wrapper__bottom__user-menu__todolist
           .header__wrapper__bottom__user-menu__todolist__icon
@@ -76,18 +84,22 @@
                 %figucaption ユーザー名
               %ul.header__wrapper__bottom__user-menu__mypage__box__status__reviewlist
                 %li
-                  %a 評価
+                  %a.clearfix 評価:0
                 %li
-                  %a 出品数
+                  %a 出品数:0
               %ul.header__wrapper__bottom__user-menu__mypage__box__status__salespoint
                 %li
                   %a
                     .l-left 売上金
-                    .l-right 0円
+                    .l-right 
+                      = "0"
+                      %i.fa.fa-arrow-right
                 %li
                   %a
                     .l-left ポイント
-                    .l-right 0
+                    .l-right 
+                      = "0"
+                      %i.fa.fa-arrow-right
             %ul.header__wrapper__bottom__user-menu__mypage__box__nav
               %li
                 %a
@@ -101,4 +113,17 @@
                 %a
                   = "出品した商品-取引中"
                   %i.fa.fa-arrow-right
+              %li
+                %a
+                  = "出品した商品-売却済"
+                  %i.fa.fa-arrow-right
+              %li
+                %a
+                  = "購入した商品-取引中"
+                  %i.fa.fa-arrow-right
+              %li
+                %a
+                  = "購入した商品-過去の取引"
+                  %i.fa.fa-arrow-right
+                
 
